--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.876.0",
     "aws-sdk": "^2.1692.0",
+    "dotenv": "^17.2.1",
     "uuid": "^11.1.0",
     "yargs": "^18.0.0"
   }
