--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.876.0",
     "aws-sdk": "^2.1692.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
