--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "yargs": "^18.0.0"
